@@ -433,7 +433,7 @@ data:extend({
     name = "pm-blank-bio-module",
     icon_size = 128,
     icon = "__periodic-madness__/graphics/icons/blank-bio-module.png",
-    subgroup = "science-pack",
+    subgroup = "pm-bio-modules-rnm",
     order = "a",
     stack_size = 20,
   },
@@ -442,8 +442,8 @@ data:extend({
     name = "pm-health-bio-module",
     icon_size = 128,
     icon = "__periodic-madness__/graphics/icons/health-bio-module.png",
-    subgroup = "pm-CISD2-rnm",
-    order = "x",
+    subgroup = "pm-bio-modules-rnm",
+    order = "b",
     stack_size = 10,
     durability = 1,
     durability_description_key = "description.science-pack-remaining-amount-key",
@@ -472,8 +472,8 @@ data:extend({
     name = "pm-strength-bio-module",
     icon_size = 128,
     icon = "__periodic-madness__/graphics/icons/strength-bio-module.png",
-    subgroup = "pm-myostatin-rnm",
-    order = "x",
+    subgroup = "pm-bio-modules-rnm",
+    order = "c",
     stack_size = 10,
     durability = 1,
     durability_description_key = "description.science-pack-remaining-amount-key",
@@ -502,8 +502,8 @@ data:extend({
     name = "pm-agility-bio-module",
     icon_size = 128,
     icon = "__periodic-madness__/graphics/icons/agility-bio-module.png",
-    subgroup = "pm-acetonitrile-rnm",
-    order = "x",
+    subgroup = "pm-bio-modules-rnm",
+    order = "d",
     stack_size = 10,
     durability = 1,
     durability_description_key = "description.science-pack-remaining-amount-key",
